# AirSimMyCodes

./: airsim_autonomous_fly.py  config.yaml  freeze_unfreeze.py  pyproject.toml  settings.json
airsim_nav/: config.py  mission_manager.py  test_reactive.py
airsim_nav/mapping/: fusion.py  fusion_gpu.py
airsim_nav/missions/: hybrid_runner.py  mission_city_ultra_patrol.yaml  new_hybrid_runner.py
airsim_nav/perception/: __init__.py  assign_segmentation_ids.py  id_collector.py  id_test.py  lidar_processor.py  lidar_processor_gpu.py  lidar_test.py  mask2grid.py  newidtest.py  seg360_thread.py  seg_test.py  segmentation_id_map.csv  segmentation_processor.py  segmentation_processor_gpu.py  setup_seg_ids.py
airsim_nav/planning/: navigator_hybrid.py  planner_hybrid.py  robust_reactive.py  ssss.py
airsim_nav/test/: orient_test.yaml  quick_overlao.py  test.py
airsim_nav/utils/: geometry.py
basic_dehazing/: clahe_enhance.py
data_collect_for_precision_and_mAP/: collect_test_images.py
full_pipeline/: airsim_dehaze_trt.py  airsim_dehaze_yolo_pipeline.py
keyboard_control/: drone_keyboard_control.py
